--- a/clothing/style.css
+++ b/clothing/style.css
@@ -52,7 +52,7 @@ audio{
   display:none;
 }
 .dye{
- cursor: url(../Restaurant/pics/mario.cur), move;
+ cursor: url(../Restaurant\pics\if_Hipster_1170245.png), move;
 cursor: auto;
 cursor:default;
 }
