--- a/CH4/arcade/styling/style.css
+++ b/CH4/arcade/styling/style.css
@@ -1,55 +1,22 @@
 /* style.css */
- td{
- text-align: center;
- color: cyan;
-  font-size: 20px;
-     word-spacing: 5px;
-     background-color: orange;
-
+body{
+ background-color: lightblue;
  }
  .table{
    margin-left: auto;
    margin-right: auto;
- }
- .game{
-   text-transform: uppercase;
-   background-color: blue;
- }
- body{
-
-  background-color: cyan;
-  ;
+   background-color: red;
 
  }
- .even{
-   background-color: white;
- }
- .money{
+h1{
   text-align: center;
-  color: green;
- }
- a:link{
-   color:Blue;}
-   a:visited{
-     color: green;
-   }
-   a:hover{
-     color:gold;
-   }
-img {
-display: block;
-margin: auto;
 }
-.yaba{
-  border-radius: 50%;
-}
-.face{
-  border-radius: 50%;
-  display: block;
-  margin: auto;
-}
+th{
+background-color: yellow;
+
 
 }
-{
+.footer{
+color: red;
 
 }
