--- a/coffeeshoppe/baristastyles.css
+++ b/coffeeshoppe/baristastyles.css
@@ -1,1 +1,80 @@
 /*style.css*/
+body{
+  
+  background-color: lightblue;
+}
+h1{
+  color: blue;
+  text-align: center;
+text-shadow: red;
+}
+h2{
+  color: green;
+  text-align: left;
+}
+h3{
+  color:yellow;
+  text-align: center;
+}
+h4{
+  color:red;
+  text-align: right;
+}
+audio{
+  display: none;
+}
+img{
+  border-radius: 50%;
+  margin: auto;
+  display: block;
+}
+.container{
+  overflow: hidden;
+  background-color: green;
+  font-family: cursive;
+}
+.container a {
+  float:left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+}
+.container a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #00ff66;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px orange;
+  z-index: 1;
+}
+.dropdown-content a {
+  float: none;
+  color: gold;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.dropdown-content a:hover {
+  background-color: #333;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
